@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2952 2004/05/18 14:08:27 lculik Exp $
+ * $Id: ChangeLog,v 1.1 2004/05/24 22:57:11 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-06-14 15:10 UTC-0300 Luiz Rafael Culik <culikr /at / brturbo.com>
+   * xwt_gtk_viewport.c
+     xwt_gtk_window.c
+     xwt_gtk_menuitem.c
+     xwt_gtk_textbox.c
+     xwt_gtk_textarea.c
+     xwt_gtk_grid.c
+     xwt_gtk_framewnd.c
+     xwt_gtk_menu.c
+     ! minor fix on construct(set the colors members to NULL)
 
 2004-05-24 19:55 UTC-0300 Luiz Rafael Culik <culikr /at / brturbo.com>
    * xwt_gtk/xwt_gtk.h
